2007-05-30  Lluis Sanchez Gual <lluis@novell.com> 

	* gtk-gui/MonoDevelop.Projects.Gui.Dialogs.OptionPanels.CustomCommandPanelWidget.cs,
	  gtk-gui/MonoDevelop.Projects.Gui.Dialogs.OptionPanels.CustomCommandWidget.cs,
	  gtk-gui/gui.stetic,
	  MonoDevelop.Projects.Gui.Dialogs.OptionPanels/CustomCommandWidget.cs,
	  MonoDevelop.Projects.Gui.Dialogs.OptionPanels/CustomCommandPanelWidget.cs:
	  Option panel widgets don't need to be public.

2007-05-30  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.Dialogs/ProjectOptionsDialog.cs,
	  MonoDevelop.Projects.Gui.Dialogs/CombineOptionsDialog.cs: Make sure
	  root nodes in option dialogs are expanded by default.

2007-05-30  Ankit Jain  <jankit@novell.com>

	* MonoDevelop.Projects.Gui.Dialogs.OptionPanels/CombineStartupPanel.cs
	(.ctor): If CombineExecuteDefinition is invalid then load an empty
	default set.
	(AddEmptyExecuteDefinitions): New.

2007-05-21  Ankit Jain  <jankit@novell.com>

	* MonoDevelop.Projects.Gui.Dialogs.OptionPanels/CustomCommandWidget.cs:
	Ensure FileSelector dialog is Destroy()'ed.

2007-05-09  Lluis Sanchez Gual <lluis@novell.com> 

	* Makefile.am: Reference shared assemblies from the correct location.

2007-05-07  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui/IconService.cs: Removed reference to deleted
	  property.

2007-05-04  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.addin.xml, MonoDevelop.Projects.Gui.mdp,
	  MonoDevelop.Projects.Gui/IconService.cs,
	  MonoDevelop.Projects.Gui.Dialogs/ProjectOptionsDialog.cs,
	  MonoDevelop.Projects.Gui.Dialogs/CombineOptionsDialog.cs,
	  Makefile.am: Migration to Mono.Addins.

2007-04-19  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Projects.Gui.addin.xml, MonoDevelop.Projects.Gui.mdp,
	  MonoDevelop.Projects.Gui.Deployment,
	  MonoDevelop.Projects.Gui.Deployment/DialogFileReplacePolicy.cs,
	  MonoDevelop.Projects.Gui.Deployment/IFileCopyConfigurationEditor.cs,